// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with multiple items 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        12
      </span>
       
      expenses
       totalling 
      <span>
        $123.45
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button-layout"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render summary with one item 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button-layout"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
